--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,15 +9,19 @@ branches:
 skip_branch_with_pr: true
 
 environment:
-  N64PluginsDir: C:\projects\gliden64\build\Zilmar-spec\
-  N64PluginsDir_x64: C:\projects\gliden64\build\Zilmar-spec_x64\
-  Mupen64PluginsDir: C:\projects\gliden64\build\Mupen64Plus\
-  Mupen64PluginsDir_x64: C:\projects\gliden64\build\Mupen64Plus_x64\
+  BUILD_PATH: %APPVEYOR_BUILD_FOLDER%\build
   QTDIR_x86: C:\Static_Qt_x86
   QTDIR_x64: C:\Static_Qt_x64
   QT_BUILD_BASE_URL: https://github.com/gonetz/GLideN64/releases/download/qt_build/
   QT_BUILD_x86: qt-5_7_1-x86-msvc2017-static
   QT_BUILD_x64: qt-5_7_1-x64-msvc2017-static
+  # Builds
+  N64PluginsDir: %BUILD_PATH%\Zilmar-spec-qt\
+  N64PluginsDir_x64: %BUILD_PATH%\Zilmar-spec-qt_x64\
+  N64PluginsDir-wtl: %BUILD_PATH%\Zilmar-spec-wtl\
+  N64PluginsDir-wtl_x64: %BUILD_PATH%\Zilmar-spec-wtl_x64\
+  Mupen64PluginsDir: %BUILD_PATH%\Mupen64Plus\
+  Mupen64PluginsDir_x64: %BUILD_PATH%\Mupen64Plus_x64\
 
 before_build:
   - curl -L -o %QT_BUILD_x86%.7z %QT_BUILD_BASE_URL%/%QT_BUILD_x86%.7z
@@ -27,35 +31,51 @@ before_build:
 
 build_script:
   - cd %APPVEYOR_BUILD_FOLDER%
+  # Zilmar-spec (Qt)
   - set QTDIR=%QTDIR_x64%\%QT_BUILD_x64%
   - msbuild projects/msvc/GLideNUI.vcxproj /m /p:Configuration=Release;Platform=x64
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_qt;Platform=x64
   - set QTDIR=%QTDIR_x86%\%QT_BUILD_x86%
   - msbuild projects/msvc/GLideNUI.vcxproj /m /p:Configuration=Release;Platform=Win32
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_qt;Platform=Win32
+  # Zilmar-spec (WTL)
   - msbuild projects/msvc/GLideNUI-wtl.vcxproj /m /p:Configuration=Release;Platform=x64
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_wtl;Platform=x64
   - msbuild projects/msvc/GLideNUI-wtl.vcxproj /m /p:Configuration=Release;Platform=Win32
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_wtl;Platform=Win32
+  # Mupen64Plus (nogui)
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_mupenplus;Platform=x64
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_mupenplus;Platform=Win32
 
 after_build:
+  # Zilmar-spec (Qt)
   - copy ini\GLideN64.custom.ini %N64PluginsDir_x64%
-  - copy translations\release\*.qm %N64PluginsDir_x64%
   - copy ini\GLideN64.custom.ini %N64PluginsDir%
+  - copy translations\release\*.qm %N64PluginsDir_x64%
   - copy translations\release\*.qm %N64PluginsDir%
+  # Zilmar-spec (WTL)
+  - copy ini\GLideN64.custom.ini %N64PluginsDir-wtl_x64%
+  - copy ini\GLideN64.custom.ini %N64PluginsDir-wtl%
+  - mkdir %N64PluginsDir-wtl_x64%\translations
+  - mkdir %N64PluginsDir-wtl%\translations
+  - copy translations\wtl\*.Lang %N64PluginsDir-wtl_x64%\translations
+  - copy translations\wtl\*.Lang %N64PluginsDir-wtl%\translations
+  # Mupen64Plus (nogui)
   - copy ini\GLideN64.custom.ini %Mupen64PluginsDir_x64%\
   - copy ini\GLideN64.custom.ini %Mupen64PluginsDir%\
+  # Cleanup
   - del /Q %N64PluginsDir_x64%\*.lib %N64PluginsDir_x64%\*.exp
   - del /Q %N64PluginsDir%\*.lib %N64PluginsDir%\*.exp
+  - del /Q %N64PluginsDir-wtl_x64%\*.lib %N64PluginsDir_x64%\*.exp
+  - del /Q %N64PluginsDir-wtl%\*.lib %N64PluginsDir%\*.exp
   - del /Q %Mupen64PluginsDir_x64%\*.lib %Mupen64PluginsDir_x64%\*.exp
   - del /Q %Mupen64PluginsDir%\*.lib %Mupen64PluginsDir%\*.exp
-  - cd C:\projects\gliden64\build
+  - cd %BUILD_PATH%
   - ps: $env:revision = git describe --always
-  - set archive_name=GLideN64-%revision%.7z
-  - 7z a %archive_name% *
+  - set archive_name=GLideN64-%revision%-@fname.7z
+  - forfiles /p %BUILD_PATH% /c "cmd /c 7z a %archive_name% @path\*"
 
 artifacts:
-  - path: build\$(archive_name)
-    name: GLideN64
+  - path: build\*.7z
+    name: GLideN64 plugin
+    type: 7z archive
