--- a/projects/msvc/GLideNUI-wtl.vcxproj.filters
+++ b/projects/msvc/GLideNUI-wtl.vcxproj.filters
@@ -247,73 +247,43 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\..\src\GLideNUI-wtl\BottomLeft.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\BottomRight.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Down.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
     <Image Include="..\..\src\GLideNUI-wtl\Icon-Original.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Icon-Original.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\BottomLeft.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Info.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\BottomRight.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Left.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Down.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Right.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Icon.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\TopLeft.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Icon-Original.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\TopRight.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Info.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Up.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Left.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI\Info.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Right.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI\Warning.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\TopLeft.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI\TopLeft.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\TopRight.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI\Up.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Up.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\src\GLideNUI\TopRight.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI\Left.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI\Right.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI\BottomLeft.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI\Down.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI\BottomRight.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI-wtl\Icon.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="..\..\src\GLideNUI\Icon-Original.ico">
+    <Image Include="..\..\src\GLideNUI\Resources\Warning.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
