--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,17 +9,19 @@ branches:
 skip_branch_with_pr: true
 
 environment:
-  PJ64PluginsDirQT: C:\projects\gliden64\build\GLideN64-QT_for_Project64\
-  PJ64PluginsDirQT_x64: C:\projects\gliden64\build\GLideN64-QT_for_Project64_x64\
-  PJ64PluginsDirWTL: C:\projects\gliden64\build\GLideN64-WTL_for_Project64\
-  PJ64PluginsDirWTL_x64: C:\projects\gliden64\build\GLideN64-WTL_for_Project64_x64\
-  Mupen64PluginsDir: C:\projects\gliden64\build\GLideN64_for_Mupen64Plus\
-  Mupen64PluginsDir_x64: C:\projects\gliden64\build\GLideN64_for_Mupen64Plus_x64\
+  BUILD_PATH: $(APPVEYOR_BUILD_FOLDER)\build
   QTDIR_x86: C:\Static_Qt_x86
   QTDIR_x64: C:\Static_Qt_x64
   QT_BUILD_BASE_URL: https://github.com/gonetz/GLideN64/releases/download/qt_build/
   QT_BUILD_x86: qt-5_7_1-x86-msvc2017-static
   QT_BUILD_x64: qt-5_7_1-x64-msvc2017-static
+  # Builds
+  PJ64PluginsDirQT: $(BUILD_PATH)\QT_for_Project64\
+  PJ64PluginsDirQT_x64: $(BUILD_PATH)\QT_for_Project64_x64\
+  PJ64PluginsDirWTL: $(BUILD_PATH)\WTL_for_Project64\
+  PJ64PluginsDirWTL_x64: $(BUILD_PATH)\WTL_for_Project64_x64\
+  Mupen64PluginsDir: $(BUILD_PATH)\for_Mupen64Plus\
+  Mupen64PluginsDir_x64: $(BUILD_PATH)\for_Mupen64Plus_x64\
 
 before_build:
   - curl -L -o %QT_BUILD_x86%.7z %QT_BUILD_BASE_URL%/%QT_BUILD_x86%.7z
@@ -29,41 +31,51 @@ before_build:
 
 build_script:
   - cd %APPVEYOR_BUILD_FOLDER%
+  # Zilmar-spec (Qt)
   - set QTDIR=%QTDIR_x64%\%QT_BUILD_x64%
   - msbuild projects/msvc/GLideNUI.vcxproj /m /p:Configuration=Release;Platform=x64
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_qt;Platform=x64
   - set QTDIR=%QTDIR_x86%\%QT_BUILD_x86%
   - msbuild projects/msvc/GLideNUI.vcxproj /m /p:Configuration=Release;Platform=Win32
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_qt;Platform=Win32
+  # Zilmar-spec (WTL)
   - msbuild projects/msvc/GLideNUI-wtl.vcxproj /m /p:Configuration=Release;Platform=x64
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_wtl;Platform=x64
   - msbuild projects/msvc/GLideNUI-wtl.vcxproj /m /p:Configuration=Release;Platform=Win32
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_wtl;Platform=Win32
+  # Mupen64Plus (nogui)
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_mupenplus;Platform=x64
   - msbuild projects/msvc/GLideN64.sln /m /p:Configuration=Release_mupenplus;Platform=Win32
 
 after_build:
-  - copy ini\GLideN64.custom.ini %PJ64PluginsDirQT%
+  # Zilmar-spec (Qt)
   - copy ini\GLideN64.custom.ini %PJ64PluginsDirQT_x64%
-  - copy ini\GLideN64.custom.ini %PJ64PluginsDirWTL%
-  - copy ini\GLideN64.custom.ini %PJ64PluginsDirWTL_x64%
-  - copy translations\release\*.qm %PJ64PluginsDirQT%
+  - copy ini\GLideN64.custom.ini %PJ64PluginsDirQT%
   - copy translations\release\*.qm %PJ64PluginsDirQT_x64%
-  - copy translations\release\*.qm %PJ64PluginsDirWTL%
-  - copy translations\release\*.qm %PJ64PluginsDirWTL_x64%
+  - copy translations\release\*.qm %PJ64PluginsDirQT%
+  # Zilmar-spec (WTL)
+  - copy ini\GLideN64.custom.ini %PJ64PluginsDirWTL_x64%
+  - copy ini\GLideN64.custom.ini %PJ64PluginsDirWTL%
+  - mkdir %PJ64PluginsDirWTL_x64%\translations
+  - mkdir %PJ64PluginsDirWTL%\translations
+  - copy translations\wtl\*.Lang %PJ64PluginsDirWTL_x64%\translations
+  - copy translations\wtl\*.Lang %PJ64PluginsDirWTL%\translations
+  # Mupen64Plus (nogui)
   - copy ini\GLideN64.custom.ini %Mupen64PluginsDir_x64%\
   - copy ini\GLideN64.custom.ini %Mupen64PluginsDir%\
-  - del /Q %PJ64PluginsDir%\*.lib %PJ64PluginsDirQT%\*.exp
-  - del /Q %PJ64PluginsDir_x64%\*.lib %PJ64PluginsDirQT_x64%\*.exp
-  - del /Q %PJ64PluginsDir%\*.lib %PJ64PluginsDirWTL%\*.exp
-  - del /Q %PJ64PluginsDir_x64%\*.lib %PJ64PluginsDirWTL_x64%\*.exp
+  # Cleanup
+  - del /Q %PJ64PluginsDirQT_x64%\*.lib %PJ64PluginsDirQT_x64%\*.exp
+  - del /Q %PJ64PluginsDirQT%\*.lib %PJ64PluginsDirQT%\*.exp
+  - del /Q %PJ64PluginsDirWTL_x64%\*.lib %PJ64PluginsDirWTL_x64%\*.exp
+  - del /Q %PJ64PluginsDirWTL%\*.lib %PJ64PluginsDirWTL%\*.exp
   - del /Q %Mupen64PluginsDir_x64%\*.lib %Mupen64PluginsDir_x64%\*.exp
   - del /Q %Mupen64PluginsDir%\*.lib %Mupen64PluginsDir%\*.exp
-  - cd C:\projects\gliden64\build
+  - cd %BUILD_PATH%
   - ps: $env:revision = git describe --always
-  - set archive_name=GLideN64-%revision%.7z
-  - 7z a %archive_name% *
+  - set archive_name=GLideN64-%revision%-@fname.7z
+  - forfiles /p %BUILD_PATH% /c "cmd /c 7z a %archive_name% @path\*"
 
 artifacts:
-  - path: build\$(archive_name)
-    name: GLideN64
+  - path: build\*.7z
+    name: GLideN64 plugin
+    type: 7z archive
