Add custom setting for 1080 Snowboarding

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -1,10 +1,14 @@
 ; Custom game settings
 [General]
-version=13
+version=14
 
 [TWINE]
 Good_Name=007 - The World Is Not Enough (E)(U)
 frameBufferEmulation\N64DepthCompare=1
+
+[1080%20Snowboarding]
+Good_Name=1080 Snowboarding
+frameBufferEmulation\copyToRDRAM=2
 
 [BIOFREAKS]
 Good_Name=Bio F.R.E.A.K.S. (E)(U)
