--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,12 @@ src/Revision.h
 /projects/msvc/GLideN64.VC.VC.opendb
 /projects/msvc/GLideN64.VC.db
 /projects/msvc/GeneratedFiles
+/projects/cmake/CMakeCache.txt
+/projects/cmake/CMakeFiles/
+/projects/cmake/GLideNHQ/
+/projects/cmake/Makefile
+/projects/cmake/cmake_install.cmake
+/projects/cmake/osal/
+/projects/cmake/mupen64plus-video-GLideN64_autogen/
 .vs
 /translations/wtl
