--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -43,7 +43,8 @@ frameBufferEmulation\copyAuxToRDRAM=1
 
 [DONKEY%20KONG%2064]
 Good_Name=Donkey Kong 64 (E)(J)(U)
-frameBufferEmulation\copyDepthToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=0
+frameBufferEmulation\N64DepthCompare=0
 
 [DR.MARIO%2064]
 Good_Name=Dr. Mario 64 (U)
