Enambe native res texrects for "40 Winks" in custom ini.
Fixed #2432 40 Winks displays squares on 2D Backgrounds

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -6,6 +6,10 @@ version=13
 Good_Name=007 - The World Is Not Enough (E)(U)
 frameBufferEmulation\N64DepthCompare=1
 
+[40%20WINKS]
+Good_Name=40 Winks (E) (M3) (Prototype)
+graphics2D\enableNativeResTexrects=1
+
 [BIOFREAKS]
 Good_Name=Bio F.R.E.A.K.S. (E)(U)
 frameBufferEmulation\copyToRDRAM=1
