Add custom settings for NASCAR games.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -171,6 +171,14 @@ frameBufferEmulation\fbInfoDisabled=0
 Good_Name=Mystical Ninja 2 Starring Goemon (E)
 graphics2D\enableNativeResTexrects=1
 
+[NASCAR%202000]
+Good_Name=NASCAR 2000 (U)
+frameBufferEmulation\copyToRDRAM=1
+
+[NASCAR%2099]
+Good_Name=NASCAR 99 (U)
+frameBufferEmulation\copyToRDRAM=1
+
 [NUD-DMPJ-JPN_convert]
 Good_Name=Mario Paint Studio (cart hack)
 frameBufferEmulation\copyFromRDRAM=1
